# mdbook-check-code

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  package.nix  sunscreen-llvm.nix
.github/workflows/: ci.yml
scripts/: format-markdown
src/: approval.rs  compilation.rs  config.rs  extractor.rs  language.rs  lib.rs  main.rs  preprocessor.rs  reporting.rs  task_collector.rs
src/language/: mod.rs
tests/: integration.rs
tests/common/: mod.rs
tests/fixtures/: book.toml
tests/fixtures/error_cases/: book.toml
tests/fixtures/error_cases/src/: SUMMARY.md  test_error.md
tests/fixtures/src/: SUMMARY.md  basic.md  c_example.md  propagate.md  solidity_example.md  test_error.md  typescript_example.md
tests/fixtures/src/other_langs/c_examples/: README.md
tests/fixtures/src/other_langs/ts_examples/: README.md
tests/fixtures/src/parasol_examples/: README.md
tests/fixtures/valid_cases/src/: intro.md
tests/fixtures/valid_cases/src/other_langs/: README.md
tests/fixtures/valid_cases/src/other_langs/ts_examples/: README.md  typescript_example.md
tests/fixtures/valid_cases/src/parasol_examples/: basic.md
