[package]
name = "mdbook-check-parasol"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mdbook-check-parasol"
path = "src/main.rs"

[dependencies]
mdbook = "0.4"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11.1"
tempfile = "3.19.1"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
