[package]
name = "mdbook-check-code"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "mdbook_check_code"
path = "src/lib.rs"

[[bin]]
name = "mdbook-check-code"
path = "src/main.rs"

[dependencies]
mdbook = "0.4"
pulldown-cmark = "0.11"
tempfile = "3.19.1"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "cargo"] }
sha2 = "0.10.9"
directories = "6.0.0"
tokio = { version = "1.42", features = ["process", "fs", "io-util", "rt"] }
futures = "0.3"
num_cpus = "1.16"

[dev-dependencies]
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }

[features]
default = []
test-util = []
